--- a/styles.css
+++ b/styles.css
@@ -316,7 +316,7 @@ body {
   position: absolute;
   inset: 0;
   background-color: #fff;
-  background-image: url("assets/section-background.svg");
+  background-image: url("../assets/section-background.svg");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
